feat(forge): port message ingress and notification core
Port from Fabric 1.21.1:
- chat/message/ChatCanvasMessageIngress — main message receiver
- chat/message/PendingMessageContextRegistry — message dedup
- chat/notification/MentionMessageIdRegistry — mention tracking
- chat/notification/MentionNotificationDeduplicator

Staged for later (need more porting):
- PlayerChatCapture, MentionNotificationController, MentionFlashOverlay
- MentionSoundPlayer, MentionToastManager, ChatCanvasInputSender
- ChatLayoutCalculator, EmojiFontSupport, CommandToolRuntime
- DualChatHudRenderer, ChatRenderEngine, etc.

Message ingress now receives messages from ChatComponent (via mixin)
and classifies them into ChatCanvasMessage objects for the dual-channel renderer.